# pico-peristaltic-tester

./: .gitignore  Makefile  README.md
client/: Makefile  main.cpp
pico/: CMakeLists.txt  main.cpp  pico_sdk_import.cmake
